--- a/src/MEGASync/gui/win/SettingsDialog.ui
+++ b/src/MEGASync/gui/win/SettingsDialog.ui
@@ -20,143 +20,18 @@
    <string>Settings</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#switch
+   <string notr="true">QWidget
 {
-border-style: none;
-background-color: transparent;
+font-size: 12px;
 }
 
-#switch::indicator
+QComboBox
 {
-border-style: none;
-background-color: transparent;
-width: 40px;
-height: 19px;
+min-height: 24px;
 }
-
-#switch::indicator:checked
-{
-image: url(:/images/themed/light/switch_on.svg); /*replaceThemeToken*/
-}
-
-#switch::indicator:checked:hover
-{
-image: url(:/images/themed/light/switch_on_hover.svg); /*replaceThemeToken*/
-}
-
-#switch::indicator:checked:pressed
-{
-image: url(:/images/themed/light/switch_on_pressed.svg); /*replaceThemeToken*/
-}
-
-#switch::indicator:unchecked
-{
-image: url(:/images/themed/light/switch_off.svg); /*replaceThemeToken*/
-}
-
-#switch::indicator:unchecked:hover
-{
-image: url(:/images/themed/light/switch_off_hover.svg); /*replaceThemeToken*/
-}
-
-#switch::indicator:unchecked:pressed
-{
-image: url(:/images/themed/light/switch_off_pressed.svg); /*replaceThemeToken*/
-}
-
-#SmartDescription, #AdvanceDescription
-{
-color: #616366; /*colorToken.text-secondary*/
-}
-
-#LearnMoreContainer, #SelectorsContainer, #ButtonContainer, #widget_21, #widget_6, #AdvanceSelector, #SmartSelector
-{
-background-color: transparent;
-}
-
-#bAdd
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
-
-#bHelp
-{
-border: none;
-color: #2C5BEB; /*colorToken.link-primary*/
-background-color: transparent;
-font-weight: bold;
-}
-
-#wControlButtons
-{
-background-color: #fafafa; /*colorToken.surface-1*/
-}
-
-#wDetails
-{
-background-color: #fafafa; /*colorToken.surface-1*/
-}
-
-#wUpdateSection
-{
-background-color: transparent;
-}
-
-#bClearCache, #bClearRemoteCache, #bClearFileVersions
-{
-background-color:  #F3F4F4; /*colorToken.button-secondary*/
-color: #616366; /*colorToken.text-secondary*/
-border-color:  #F3F4F4; /*colorToken.button-secondary*/
-border-width: 0px;
-border-style: solid;
-border-radius: 5px;
-padding: 3px 10px 3px 10px;
-}
-
-#sCacheSchedulerDays
-{
-border-style: solid;
-border-color: #D8D9DB; /*colorToken.border-strong*/
-border-width: 1px;
-border-radius: 5px;
-background-color: #FFFFFF; /* colorToken.page-background*/
-padding: 6px;
-}
-
-/*ColorTokenIcon;Button;bAccount;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bAccount;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bBackup;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bBackup;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bFolders;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bFolders;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bGeneral;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bGeneral;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bNetwork;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bNetwork;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bNotifications;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bNotifications;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bSecurity;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bSecurity;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bSyncs;normal;on;colorToken.icon-primary*/
-/*ColorTokenIcon;Button;bSyncs;normal;off;colorToken.icon-secondary*/
-
-/*ColorTokenIcon;Button;bHelp;normal;off;colorToken.link-primary*/
-
-/*ColorTokenIcon;Button;bAdd;normal;off;colorToken.text-inverse-accent*/
-/*ColorTokenIcon;Button;bDelete;normal;off;colorToken.button-outline*/
 
 #wTabHeader
 {
-margin-left: 12px;
-margin-right: 12px;
 border-bottom: 1px solid rgba(0,0,0,0.1);;
 }
 
@@ -166,14 +41,15 @@ padding: 12px 13px 10px 13px;
 border-left: 0px;
 border-top: 0px;
 border-right: 0px;
-border-bottom: 3px solid #f1f1f1; /* colorToken.border-strong*/
+border-bottom: 3px solid #f1f1f1;
 background-color: transparent;
-color: #333333; /*colorToken.text-primary*/
+color: #333333;
 }
 
 #wTabHeader QToolButton:checked
 {
-border-bottom: 3px solid #0078D7; /*colorToken.button-brand*/
+background-color: #FFFFFF;
+border-bottom: 3px solid #0078D7;
 }
 
 #bChangePasswordPic, #bRecoveryKeyPic
@@ -181,22 +57,15 @@ border-bottom: 3px solid #0078D7; /*colorToken.button-brand*/
 border: none;
 }
 
-#pUsedBandwidth
+#lSyncType
 {
-margin-right: 6px;
-margin-left: 1px;
+font-weight: bold;
+font-size: 15px;
 }
 
-#cProxyRequiresPassword
+#lSyncText
 {
-spacing: 11px;
-padding-top: 1px;
-padding-bottom: 0px;
-}
-
-#lProxyType
-{
-padding-bottom: -1px;
+font-style: italic;
 }
 
 #lHeader
@@ -208,7 +77,11 @@ border: none;
 #lAccountType, #lName
 {
 font-size: 13px;
-background-color: #fafafa; /*colorToken.surface-1*/
+}
+
+#lBandwidthFree
+{
+color: #0078D7;
 }
 
 #lAccountType
@@ -219,17 +92,17 @@ padding: 0px;
 margin: 0px;
 }
 
-#lBandwidthFree
+QTableView::item:selected
 {
-	 color: #0078D7;
+background-color: rgba(0,120,215,0.8);
 }
 
 #lUploadRateLimit, #lDownloadRateLimit, #lProxySettings
 {
-    font-weight: bold;
+font-weight: bold;
 }
 
-#cbSleepSettings
+#cbSleepMode 
 {
 margin-top: 4px;
 }
@@ -270,9 +143,6 @@ margin-top: 4px;
        <width>16777215</width>
        <height>80</height>
       </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
@@ -320,7 +190,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-general.svg</normaloff>:/images/settings-general.svg</iconset>
+          <normaloff>:/images/settings-general.png</normaloff>:/images/settings-general.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -369,7 +239,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-account.svg</normaloff>:/images/settings-account.svg</iconset>
+          <normaloff>:/images/settings-account.png</normaloff>:/images/settings-account.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -415,7 +285,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-sync.svg</normaloff>:/images/settings-sync.svg</iconset>
+          <normaloff>:/images/settings-syncs.png</normaloff>:/images/settings-syncs.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -461,7 +331,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-backup.svg</normaloff>:/images/settings-backup.svg</iconset>
+          <normaloff>:/images/settings-backup.png</normaloff>:/images/settings-backup.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -507,7 +377,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-shield.svg</normaloff>:/images/settings-shield.svg</iconset>
+          <normaloff>:/images/settings-security.png</normaloff>:/images/settings-security.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -553,7 +423,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-folders.svg</normaloff>:/images/settings-folders.svg</iconset>
+          <normaloff>:/images/settings-folders.png</normaloff>:/images/settings-folders.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -599,7 +469,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-network.svg</normaloff>:/images/settings-network.svg</iconset>
+          <normaloff>:/images/Icon_Win_Network.png</normaloff>:/images/Icon_Win_Network.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -640,7 +510,7 @@ margin-top: 4px;
         </property>
         <property name="icon">
          <iconset resource="../Resources_win.qrc">
-          <normaloff>:/images/settings-notifications.svg</normaloff>:/images/settings-notifications.svg</iconset>
+          <normaloff>:/images/Icon_Win_Notifications.png</normaloff>:/images/Icon_Win_Notifications.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -677,9 +547,6 @@ margin-top: 4px;
    </item>
    <item>
     <widget class="QStackedWidget" name="wStack">
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -846,30 +713,6 @@ margin-top: 4px;
              </property>
             </item>
            </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="gThemeSelector">
-         <property name="title">
-          <string>Theme</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_18">
-          <property name="leftMargin">
-           <number>10</number>
-          </property>
-          <property name="topMargin">
-           <number>10</number>
-          </property>
-          <property name="rightMargin">
-           <number>10</number>
-          </property>
-          <property name="bottomMargin">
-           <number>10</number>
-          </property>
-          <item>
-           <widget class="QComboBox" name="cbTheme"/>
           </item>
          </layout>
         </widget>
@@ -1291,13 +1134,30 @@ margin-top: 4px;
        <item>
         <widget class="QGroupBox" name="gAccountDetails">
          <property name="font">
-          <font/>
+          <font>
+           <pointsize>-1</pointsize>
+          </font>
          </property>
          <property name="title">
           <string>Account</string>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_8">
-          <item>
+         <layout class="QHBoxLayout" name="gAccountDetailsLayout">
+          <property name="spacing">
+           <number>12</number>
+          </property>
+          <property name="leftMargin">
+           <number>10</number>
+          </property>
+          <property name="topMargin">
+           <number>10</number>
+          </property>
+          <property name="rightMargin">
+           <number>10</number>
+          </property>
+          <property name="bottomMargin">
+           <number>10</number>
+          </property>
+          <item alignment="Qt::AlignTop">
            <widget class="AvatarWidget" name="wAvatar" native="true">
             <property name="minimumSize">
              <size>
@@ -1314,79 +1174,93 @@ margin-top: 4px;
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_6">
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_4">
-                <item>
-                 <widget class="QLabel" name="lName">
-                  <property name="textFormat">
-                   <enum>Qt::PlainText</enum>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="lAccountType">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                  <property name="icon">
-                   <iconset resource="../Resources_win.qrc">
-                    <normaloff>:/images/Small_Free.png</normaloff>:/images/Small_Free.png</iconset>
-                  </property>
-                  <property name="iconSize">
-                   <size>
-                    <width>12</width>
-                    <height>12</height>
-                   </size>
-                  </property>
-                  <property name="autoDefault">
-                   <bool>false</bool>
-                  </property>
-                  <property name="flat">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <widget class="QLabel" name="lEmail"/>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_3">
-              <item>
-               <widget class="QPushButton" name="bUpgrade">
-                <property name="focusPolicy">
-                 <enum>Qt::StrongFocus</enum>
-                </property>
-                <property name="text">
-                 <string>Upgrade</string>
-                </property>
-                <property name="autoDefault">
-                 <bool>false</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="bMyAccount">
-                <property name="text">
-                 <string>My Account</string>
-                </property>
-                <property name="autoDefault">
-                 <bool>false</bool>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-           </layout>
+           <widget class="QWidget" name="wDetails" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <layout class="QGridLayout" name="wDetailsLayout">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <property name="horizontalSpacing">
+              <number>10</number>
+             </property>
+             <property name="verticalSpacing">
+              <number>2</number>
+             </property>
+             <item row="2" column="1">
+              <widget class="QPushButton" name="bUpgrade">
+               <property name="focusPolicy">
+                <enum>Qt::StrongFocus</enum>
+               </property>
+               <property name="text">
+                <string>Upgrade</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QPushButton" name="lAccountType">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="icon">
+                <iconset resource="../Resources_win.qrc">
+                 <normaloff>:/images/Small_Free.png</normaloff>:/images/Small_Free.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>12</width>
+                 <height>12</height>
+                </size>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+               <property name="flat">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
+              <widget class="QPushButton" name="bMyAccount">
+               <property name="text">
+                <string>My Account</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="3">
+              <widget class="QLabel" name="lEmail"/>
+             </item>
+             <item row="0" column="0" colspan="3">
+              <widget class="QLabel" name="lName">
+               <property name="textFormat">
+                <enum>Qt::PlainText</enum>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -2249,9 +2123,6 @@ min-height: 72px;
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
      <layout class="QHBoxLayout" name="horizontalLayout_18">
       <property name="leftMargin">
        <number>8</number>
@@ -2268,7 +2139,14 @@ min-height: 72px;
       <item alignment="Qt::AlignLeft">
        <widget class="QPushButton" name="bHelp">
         <property name="styleSheet">
-         <string notr="true"/>
+         <string notr="true">QPushButton {
+border: none;
+color: #0078D7;
+}
+
+QPushButton::!enabled {
+color: grey;
+}</string>
         </property>
         <property name="text">
          <string>Help</string>
