--- a/src/MEGASync/gui/linux/NotificationsSettings.ui
+++ b/src/MEGASync/gui/linux/NotificationsSettings.ui
@@ -31,43 +31,20 @@
      <property name="title">
       <string/>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_7">
+     <layout class="QVBoxLayout" name="GeneralSwitchLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="GeneralSwithState">
-          <property name="font">
-           <font>
-            <pointsize>13</pointsize>
-            <bold>true</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>System notifications:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="SwitchButton" name="GeneralSwitch" native="true">
-          <property name="NotificationType" stdset="0">
-           <UInt>0</UInt>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QLabel" name="GeneralSwithState">
+        <property name="text">
+         <string>System notifications:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="SwitchButton" name="GeneralSwitch" native="true">
+        <property name="NotificationType" stdset="0">
+         <UInt>0</UInt>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
