--- a/src/MEGASync/gui/linux/RemoteItemUi.ui
+++ b/src/MEGASync/gui/linux/RemoteItemUi.ui
@@ -53,7 +53,44 @@
       <item>
        <widget class="QTableView" name="tableView">
         <property name="styleSheet">
-         <string notr="true"/>
+         <string notr="true">QTableView
+{
+background: white;
+outline: 0;
+border: 1px solid #D8D8D8;
+}
+
+QTableView::item
+{
+border: none;
+padding-left:4px;
+}
+
+QTableView::item::selected
+{
+background-color: rgba(0,120,215,0.8);
+color:white;
+}
+
+QHeaderView
+{
+background: #FFFFFF;
+padding-top: 2px;
+}
+
+QHeaderView::section {
+background: #FFFFFF;
+color: #4A607A;
+padding-left:6px;
+border-top:0 px;
+border-bottom:0px;
+border-left:0px;
+border-right:0px ;
+}
+
+QHeaderView::section:last {
+border-right:0px;
+}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
@@ -151,10 +188,6 @@
            <property name="text">
             <string>Add</string>
            </property>
-           <property name="icon">
-            <iconset resource="../Resources_linux.qrc">
-             <normaloff>:/images/plus.svg</normaloff>:/images/plus.svg</iconset>
-           </property>
            <property name="autoDefault">
             <bool>false</bool>
            </property>
@@ -171,10 +204,6 @@
            <property name="text">
             <string>Delete</string>
            </property>
-           <property name="icon">
-            <iconset resource="../Resources_linux.qrc">
-             <normaloff>:/images/minus.svg</normaloff>:/images/minus.svg</iconset>
-           </property>
            <property name="autoDefault">
             <bool>false</bool>
            </property>
@@ -188,8 +217,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../Resources_linux.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
