--- a/src/MEGASync/gui/win/ChangePassword.ui
+++ b/src/MEGASync/gui/win/ChangePassword.ui
@@ -7,62 +7,48 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>150</height>
+    <height>108</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>400</width>
-    <height>150</height>
+    <height>100</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>400</width>
-    <height>150</height>
+    <height>108</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Change password</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">#lNewPassword, #lConfirmNewPassword
-{
-border-radius: 8px;
-border-color: #D8D9DB; /*colorToken.border-strong*/
-border-style: solid;
-border-width: 1px;
-background-color: #FFFFFF; /*colorToken.page-background*/
-height: 30px;
-padding-left: 10px;
-}
-
-#bOk
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
-
-#lDescNewPassword, #lDescConfirmNewPassword
-{
-color: #303233; /*colorToken.text-primary*/
-font-family: &quot;SF Pro Text&quot;;
-font-size: 12px;
-font-weight: 400;
-}</string>
-  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
-    <number>9</number>
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>8</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
    </property>
    <property name="rightMargin">
     <number>10</number>
+   </property>
+   <property name="bottomMargin">
+    <number>7</number>
    </property>
    <item>
     <widget class="QWidget" name="wContainer" native="true">
      <layout class="QFormLayout" name="formLayout">
       <property name="horizontalSpacing">
        <number>12</number>
+      </property>
+      <property name="verticalSpacing">
+       <number>6</number>
       </property>
       <property name="leftMargin">
        <number>6</number>
@@ -107,10 +93,10 @@ font-weight: 400;
          </size>
         </property>
         <property name="echoMode">
-         <enum>QLineEdit::EchoMode::Password</enum>
+         <enum>QLineEdit::Password</enum>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -145,10 +131,10 @@ font-weight: 400;
          </size>
         </property>
         <property name="echoMode">
-         <enum>QLineEdit::EchoMode::Password</enum>
+         <enum>QLineEdit::Password</enum>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -185,7 +171,7 @@ font-weight: 400;
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -197,12 +183,6 @@ font-weight: 400;
       </item>
       <item>
        <widget class="QPushButton" name="bCancel">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>16</height>
-         </size>
-        </property>
         <property name="text">
          <string>Cancel</string>
         </property>
@@ -210,18 +190,14 @@ font-weight: 400;
       </item>
       <item>
        <widget class="QPushButton" name="bOk">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>16</height>
-         </size>
-        </property>
         <property name="text">
          <string>OK</string>
         </property>
        </widget>
       </item>
      </layout>
+     <zorder>bCancel</zorder>
+     <zorder>bOk</zorder>
     </widget>
    </item>
   </layout>
