--- a/src/MEGASync/gui/win/NotificationsSettings.ui
+++ b/src/MEGASync/gui/win/NotificationsSettings.ui
@@ -28,37 +28,21 @@
    </property>
    <item>
     <widget class="QGroupBox" name="GeneralGroupBox">
-     <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
-     </property>
      <property name="title">
       <string/>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="SwitchButton" name="GeneralSwitch" native="true">
-        <property name="NotificationType" stdset="0">
-         <UInt>0</UInt>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
+     <layout class="QVBoxLayout" name="GeneralSwitchLayout">
       <item>
        <widget class="QLabel" name="GeneralSwithState">
         <property name="text">
          <string>System notifications:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="SwitchButton" name="GeneralSwitch" native="true">
+        <property name="NotificationType" stdset="0">
+         <UInt>0</UInt>
         </property>
        </widget>
       </item>
