--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -163,6 +163,7 @@
         <file>upsell/qmldir</file>
         <file>upsell/UpsellDialog.qml</file>
         <file>upsell/UpsellStrings.qml</file>
+        <file>upsell/PlanCard.qml</file>
         <file>sync_exclusions/qmldir</file>
         <file>sync_exclusions/ExclusionsQmlDialog.qml</file>
         <file>sync_exclusions/ExclusionsStrings.qml</file>
