Update storage progress bar color to green due to design changes.
Testrail: https://testrail.systems.mega.nz/index.php?/tests/view/17899788

--- a/src/MEGASync/transfers/gui/linux/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/linux/TransfersAccountInfoWidget.ui
@@ -64,7 +64,7 @@
 
 #pbStorage::chunk[state=&quot;default&quot;]
 {
-	background-color: #477EF7; /*colorToken.indicator-indigo*/
+	background-color: #09BF5B; /*colorToken.indicator-green*/
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 	border-top-right-radius: 0px;
