--- a/src/MEGASync/transfers/gui/linux/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/linux/TransferManager.ui
@@ -328,11 +328,6 @@ QToolButton
   font-weight: 600;
 }
 
-#wSeparator
-{
-	background-color: #EEEEEE;
-}
-
 #tActionButton
 {
 	 height: 32px;
@@ -368,9 +363,14 @@ QToolButton
     font-weight: 400;
 }
 
-/*
+/* 
 * TransfersAccountInfoWidget
 */
+
+#wSeparator
+{
+	background-color: #EEEEEE;
+}
 
 #TransferManagerAccountInfo
 {
@@ -422,7 +422,7 @@ QToolButton
 
 #pbStorage::chunk[state=&quot;default&quot;]
 {
-	background-color: #477EF7; /*colorToken.indicator-indigo*/
+	background-color: #09BF5B; /*colorToken.indicator-green*/
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 	border-top-right-radius: 0px;
@@ -456,8 +456,13 @@ QToolButton
 	border-bottom-right-radius: 4px;
 }
 
-/*
-* AccountTypeWidget 
+#TransferManagerAccountInfo
+{
+	background-color: #FAFAFA;
+}
+
+/* 
+* AccountTypeWidget
 */
 
 #bAccountType
