--- a/src/MEGASync/transfers/gui/win/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManager.ui
@@ -359,14 +359,14 @@ QGroupBox::title
 * TransfersAccountInfoWidget
 */
 
-#TransferManagerAccountInfo
-{
-	background-color: #FAFAFA;
-}
-
 #wSeparator
 {
 	background-color: #EEEEEE;
+}
+
+#TransferManagerAccountInfo
+{
+	background-color: #FAFAFA;
 }
 
 #bUpgrade
@@ -404,6 +404,55 @@ QGroupBox::title
 	background-color: #00BFA54D;
 }
 
+#pbStorage
+{
+	border-style: none;
+	border-radius: 4px;
+	background-color: #EDEDED; /*colorToken.indicator-background*/
+	max-height: 8px;
+}
+
+#pbStorage::chunk[state=&quot;default&quot;]
+{
+	background-color: #09BF5B; /*colorToken.indicator-green*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+}
+
+#pbStorage::chunk[state=&quot;almost&quot;]
+{
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+}
+
+#pbStorage::chunk[state=&quot;almostfull&quot;]
+{
+	background-color: #FB6514; /*colorToken.indicator-orange*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+#pbStorage::chunk[state=&quot;full&quot;]
+{
+	background-color: #F63D6B; /*colorToken.indicator-pink*/
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+#TransferManagerAccountInfo
+{
+	background-color: #FAFAFA;
+}
+
 /* 
 * AccountTypeWidget
 */
@@ -429,7 +478,6 @@ QGroupBox::title
 	background-color: #FFE4E8; /*colorToken.notification-error*/
     color: #E31B57; /*colorToken.text-error*/
 }
-
 </string>
   </property>
   <layout class="QHBoxLayout" name="TransferManagerLayout">
