AP-2060: Update almost full/full OQ text and style.

--- a/src/MEGASync/transfers/gui/macx/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManager.ui
@@ -274,14 +274,6 @@ QToolButton
   padding-left: 14px;
 }
 
-#lStorageOverQuota
-{
-  color: #F46265;
-  font-size: 12px;
-  font-weight: bold;
-  padding-left: 14px;
-}
-
 #lTransferOverQuotaMoreAbout
 {
   color: #333333;
@@ -378,6 +370,31 @@ QToolButton
     color: #333333;
     font-size: 24px;
     font-weight: 400;
+}
+
+/* 
+* Storage OQ text
+*/
+
+#lStorageOverQuota
+{
+	font-size: 10px;
+	font-weight: 600;
+	margin-left: 16px;
+	border-radius: 4px;
+	padding: 4px 8px;
+}
+
+#lStorageOverQuota[state=&quot;almostfull&quot;]
+{
+	background-color: #FEF4C6; /*colorToken.notification-warning*/
+	color: #B55407; /*colorToken.text-warning*/
+}
+
+#lStorageOverQuota[state=&quot;full&quot;]
+{
+	background-color: #FFE4E8; /*colorToken.notification-error*/
+	color: #E31B57; /*colorToken.text-error*/
 }
 
 /* 
@@ -2824,7 +2841,7 @@ QToolButton
              <item alignment="Qt::AlignLeft|Qt::AlignTop">
               <widget class="QLabel" name="lStorageOverQuota">
                <property name="text">
-                <string>Your MEGA account is full</string>
+                <string/>
                </property>
               </widget>
              </item>
