--- a/src/MEGASync/transfers/gui/linux/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/linux/TransferManager.ui
@@ -226,14 +226,6 @@ QGroupBox::title
     text-align: left;
 }
 
-#lStorageOverQuota
-{
-  color: #F46265;
-  font-size: 12px;
-  font-weight: bold;
-  padding-left: 14px;
-}
-
 #lTransferOverQuotaMoreAbout
 {
   color: #333333;
@@ -350,7 +342,6 @@ QToolButton
   background-color: #D3D3D3;
 }
 
-
 #tSeePlans
 {
   background-color: #3ACC86;
@@ -361,6 +352,31 @@ QToolButton
     color: #333333;
     font-size: 24px;
     font-weight: 400;
+}
+
+/* 
+* Storage OQ text
+*/
+
+#lStorageOverQuota
+{
+	font-size: 10px;
+	font-weight: 600;
+	margin-left: 16px;
+	border-radius: 4px;
+	padding: 4px 8px;
+}
+
+#lStorageOverQuota[state=&quot;almostfull&quot;]
+{
+	background-color: #FEF4C6; /*colorToken.notification-warning*/
+	color: #B55407; /*colorToken.text-warning*/
+}
+
+#lStorageOverQuota[state=&quot;full&quot;]
+{
+	background-color: #FFE4E8; /*colorToken.notification-error*/
+	color: #E31B57; /*colorToken.text-error*/
 }
 
 /* 
@@ -2762,7 +2778,7 @@ QToolButton
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>Your MEGA account is full</string>
+                <string/>
                </property>
               </widget>
              </item>
